--- a/index.html
+++ b/index.html
@@ -660,19 +660,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>C/O Tarun, Wake Me up St, Wonder Land City. 143143</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>barray@gedha.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 9865433455</p>
               </div>
 
             </div>
@@ -709,7 +709,11 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center">
+                <button type="submit" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                  Send Message
+                </button>
+              </div>
             </form>
 
           </div>
@@ -719,9 +723,29 @@
       </div>
     </section><!-- End Contact Section -->
 
-    <selection id= "dayDreaming" class= "dayDreaming">
+    <!-- <selection id= "dayDreaming" class= "dayDreaming">
       <h3>Sorry, I am day dreaming!</h3>
-    </selection><!-- End daydreaming Section -->
+    </selection> --><!-- End daydreaming Section -->
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel" style = "color: #0563bb">OPPs..</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body ">
+            Eh malli cheppu. I was with Tarun.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </main><!-- End #main -->
 
